--- a/app/globals.css
+++ b/app/globals.css
@@ -12,12 +12,20 @@
   --font-mono: var(--font-geist-mono);
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #101828;
     --foreground: #ededed;
   }
-} */
+}
+
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-primary: #023e7d;
+  --color-primary-dark: #002855;
+  --color-primary-hover: #0353a4;
+}
 
 body {
   background: var(--background);
@@ -34,4 +42,19 @@ body {
   align-items: center;
   padding: 10px;
   /* background: linear-gradient(to bottom, black, rgb(22, 22, 22)); */
+}
+
+.btn {
+  cursor: pointer;
+  background-color: var(--color-primary);
+}
+.btn:hover {
+  scale: 105%;
+  background-color: var(--color-primary-hover);
+  transition: background-color 0.3s ease;
+}
+
+.cl-internal-l2l775,
+.cl-internal-1dauvpw {
+  display: none;
 }
